# BurnBar

./: .firebaserc  .gitignore  .gitleaksignore  .swiftlint.yml  AGENTS.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_REVIEW_V2.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  GOVERNANCE.md  Makefile  OpenBurnBar SOTA Remediation Plan.md  QA_CODE_QUALITY_REVIEW.md  QA_REVIEW_REPORT.md  QA_TESTING_CI_DELIVERY_REVIEW.md  QA_TESTING_CI_REVIEW_REPORT.md  QUICKSTART.md  README.md  RELIABILITY_OPS_REVIEW.md  SECURITY.md  SECURITY_PRIVACY_REVIEW.md  SUPPORT.md  THIRD_PARTY.md  TODOS.md  firebase.json  firestore.indexes.json  firestore.rules  fix_silently.py  project.yml  storage.rules
.antigravitycli/: adf47e7a-3cbe-4d7b-a78c-501834ba5a10.json
.build_helpers/: add_cli_mirror_files.py  add_mobile_tools_files.py  add_settings_search_files.py
.deepsec/: README.md  deepsec.config.ts  package.json  pnpm-lock.yaml
.factory/: init.sh  services.yaml
.firebase/: hosting.d2Vic2l0ZS9kaXN0.cache
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.serena/: project.yml
AgentLensTests/: AgentLensTests.swift  BurnBarDaemonManagerTests.swift  BurnBarMigrationTests.swift  BurnBarOperatingLayerTests.swift  BurnBarSearchIntegrationHarness.swift  BurnBarSearchIntegrationHarnessTests.swift  CLIBridgeTests.swift  CloudSyncServiceTests.swift  ConversationParsingTests.swift  CrossEncoderRerankerTests.swift  CursorConnectorTests.swift  DailyDigestManagerTests.swift  DataStoreTests.swift  InsightEngineTests.swift  MacMediaCapabilityGateTests.swift  ParserIntegrationTests.swift  PerformanceTests.swift  ProviderQuotaServiceTests.swift  README.md  UsageAggregatorTests.swift
BurnBar.xcodeproj/: project.pbxproj
BurnBarCore/: Package.swift
BurnBarDaemon/: Package.resolved  Package.swift
OpenBurnBar.xcodeproj/: project.pbxproj
OpenBurnBarCore/: Package.swift
OpenBurnBarDaemon/: Package.resolved  Package.swift
OpenBurnBarMobile/: Info.plist
OpenBurnBarMobileTests/: AgentBrandQuickActionComposerTests.swift  AgentIdentityRegistryMacURITests.swift  AppStoreReviewComplianceTests.swift  AssistantModelMergerTests.swift  AuthStoreTests.swift  ChartSpecRendererTests.swift  ChartStudioPromptEngineTests.swift  CloudModelCodableTests.swift  DashboardNavigationModelTests.swift  EmberBackdropTests.swift  EscrowCryptoRoundTripTests.swift  FirestoreNormalizationTests.swift  FirestorePlaintextProhibitionTests.swift  HermesConversationListViewTests.swift  HermesServiceTests.swift  HostedQuotaSubscriptionStoreTests.swift  MobileChatHistoryStoreTests.swift  MobileProviderWizardCopyTests.swift  MobileProviderWizardModelTests.swift  MobileThemeTests.swift  OnboardingWizardFlowTests.swift  OpenBurnBarMobileTests.swift  OpenClawServiceTests.swift  PixelClockSettingsModelTests.swift  ProviderAvatarTests.swift  ProviderDashboardStoreTests.swift  ProviderSetupGuideRegistryTests.swift  PulseWindowMetricsTests.swift  SelfHostedQuotaRunnerStoreTests.swift  SettingsSearchEngineTests.swift  SmartDisplayOrderTests.swift  SmartHubDisplaySettingsModelTests.swift  StandardGalleryTests.swift  TrendDataDigestTests.swift  TrendInsightEngineTests.swift  UIModeTests.swift  iPadNavigationUITests.swift
OpenBurnBarMobileUITests/: RemoteMCPConnectedClientsUITests.swift
OpenBurnBarWidget/: BurnBarEntry.swift  BurnBarLiveActivityWidget.swift  BurnBarProvider.swift  BurnBarWidget.swift  BurnBarWidgetView.swift  InsightSessionLiveActivity.swift  InsightTodayWidgetProvider.swift  InsightTodayWidgetView.swift  WidgetDesignSystem.swift  WidgetSnapshotTests.swift
android/: .gitignore  build.gradle.kts  gradlew  settings.gradle.kts
crates/openburnbar-iroh/: .gitignore  Cargo.toml  README.md  build.rs
crates/openburnbar-iroh/src/: blobs.rs  datagrams.rs  lib.rs
docs/: ANDROID_CLOSED_TESTING_DEMO_DATA.md  ANDROID_NATIVE_PARITY_GOAL.md  BURNBAR_AGENT_ASSIGNMENT_MATRIX.md  BURNBAR_CURSOR_AGENT_ONBOARDING.md  BURNBAR_CURSOR_AGENT_SPEC.md  BURNBAR_IMPLEMENTATION_CHECKLIST.md  BURNBAR_RELEASE_ARCHITECTURE.md  BURNBAR_SEARCH_ARCHITECTURE_SPINE.md  BURNBAR_SUBAGENT_PROMPTS.md  BURNBAR_VIBEPROXY_REPLACEMENT_RUNBOOK.md  CHART_STUDIO.md  CONVERSATION_ATOMS.md  (+65 more)
(+13477 files in other folders)
